blog question add

--- a/blog.html
+++ b/blog.html
@@ -15,20 +15,20 @@
   </head>
   <body>
     <section>
-        <div>
+        <div class="card">
             <h1>Difference between Local Storage and Session Storage</h1>
             <p></p>
         </div>
-        <div>
-            <h1></h1>
+        <div class="card">
+            <h1>Difference between Global Scope and Block Scope</h1>
             <p></p>
         </div>
-        <div>
-            <h1></h1>
+        <div class="card">
+            <h1>What is event loop?</h1>
             <p></p>
         </div>
-        <div>
-            <h1></h1>
+        <div class="card">
+            <h1>When we get undefined in javascript?</h1>
             <p></p>
         </div>
     </section>
