--- a/blog.html
+++ b/blog.html
@@ -17,11 +17,11 @@
     <section>
         <div class="card">
             <h1>Difference between Local Storage and Session Storage</h1>
-            <p></p>
+            <p>sessionStorage is similar to localStorage ; the difference is that while data in localStorage doesn't expire, data in sessionStorage is cleared when the page session ends. Whenever a document is loaded in a particular tab in the browser, a unique page session gets created and assigned to that particular tab.</p>
         </div>
         <div class="card">
             <h1>Difference between Global Scope and Block Scope</h1>
-            <p></p>
+            <p>In a browser environment, the global scope is controlled by the window object while in Node. js, it's controlled by the global object. Block scopes are what you get when you use if statements, for statements, and the like.</p>
         </div>
         <div class="card">
             <h1>What is event loop?</h1>
