--- a/blog.html
+++ b/blog.html
@@ -25,11 +25,11 @@
         </div>
         <div class="card">
             <h1>What is event loop?</h1>
-            <p></p>
+            <p>In computer science, the event loop is a programming construct or design pattern that waits for and dispatches events or messages in a program.</p>
         </div>
         <div class="card">
             <h1>When we get undefined in javascript?</h1>
-            <p></p>
+            <p>A variable that has not been assigned a value is of type undefined . A method or statement also returns undefined if the variable that is being evaluated does not have an assigned value. A function returns undefined if a value was not returned .</p>
         </div>
     </section>
   </body>
