--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
         </div>
         <div class="card">
             <h1>When we get undefined in javascript?</h1>
-            <p>A variable that has not been assigned a value is of type undefined . A method or statement also returns undefined if the variable that is being evaluated does not have an assigned value. A function returns undefined if a value was not returned .</p>
+            <p>A variable that has not been assigned a value is of type undefined . A method or statement also returns undefined if the variable that is being evaluated does not have an assigned value. A function returns undefined if a value was not returned... .</p>
         </div>
     </section>
   </body>
